--- a/sanic_app/templates/index.html
+++ b/sanic_app/templates/index.html
@@ -1,1 +1,10 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Home page</title>
+</head>
+<body>
+    <h1>Hello Emilio</h1>
+</body>
+</html>
